--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap");
 
 :root {
-  --main-color: #f73771;
+  --main-color: red;
   --black: #000;
   --light-color: #868e96;
 }
@@ -148,6 +148,47 @@ section {
   padding: 2rem 9%;
   background: rgba(0, 0, 0, 0.9);
 }
+
+.active,
+.navbar ul li a:hover {
+  /* background-color: var(--black); */
+  border-radius: 3px;
+}
+
+.navbar ul {
+  display: inline-flex;
+  list-style: none;
+}
+
+.nav-bar1 {
+  display: none;
+}
+
+.header nav ul li:hover .nav-bar1 {
+  display: block;
+  position: absolute;
+  background-color: rgba(5, 0, 0, 0.9);
+  margin-top: 5px;
+  margin-left: -15px;
+  padding: 15px;
+}
+
+.header nav ul li:hover .nav-bar1 ul {
+  display: block;
+  margin: 15px;
+}
+
+.header nav ul li:hover .nav-bar1 ul li {
+  /* width: 250px; */
+  padding: 5px;
+  border-bottom: 1px dotted #eee;
+  background: transparent;
+  text-align: left;
+}
+
+.header nav ul li:hover .nav-bar1 ul li:last-child {
+  border-bottom: none;
+}
 /*======================Header section ends==============================*/
 
 /* =======================media queries section======================== */
@@ -185,7 +226,23 @@ section {
   .header .navbar.active {
     clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
   }
-
+  .navbar ul {
+    display: block;
+  }
+  nav {
+    height: 500px;
+  }
+  .header nav ul li:hover .nav-bar1 {
+    display: inline-block;
+    position: absolute;
+    background-color: rgba(5, 1, 1, 0.9);
+    margin-top: -15px;
+    margin-left: -15px;
+    padding: 2px 2px;
+  }
+  .header nav ul li:hover .nav-bar1 ul li {
+    padding-top: -40px;
+  }
   .header .navbar a {
     display: block;
     margin: 2rem;
@@ -247,6 +304,13 @@ section {
   color: #eee;
   padding: 1rem 0;
   transition-delay: 0.4s;
+}
+
+.home .home-slider .box .button .btn {
+  margin-top: 4rem;
+  font-size: 2rem;
+  padding: 0.5rem;
+  color: #eee;
 }
 
 .home .home-slider .box .button .btn-1 {
@@ -522,7 +586,7 @@ section {
 }
 
 .blogs .blogs-slider .box .image {
-  /* height: 40rem; */
+  /* height: 15rem; */
   width: 100%;
   overflow: hidden;
 }
@@ -580,7 +644,18 @@ section {
 }
 
 /* =================blogs section ends ======================= */
+.see-more {
+  font-size: 3rem;
+  text-decoration: none;
+  background: #868e96;
+  margin-bottom: 4rem;
+}
 
+.see-more a {
+  color: red;
+  cursor: pointer;
+  font-weight: bold;
+}
 /* =====================footer section start now=============== */
 
 .footer {
